added docs for salesman
