# salesman-router/salesman.js
@@ -4,7 +4,7 @@ const { authRole } = require('../utils/authRole');
 
 salesmanRouter.post('/create-account', salesmanController.createAccount);
 salesmanRouter.post('/login-account', salesmanController.loginAccount);
-salesmanRouter.post('/logout-account', authRole,  salesmanController.Logout);
+salesmanRouter.post('/logout-account/:salesmanId', authRole,  salesmanController.Logout);
 
 module.exports = salesmanRouter;
 
